tests/semantic/valid/15_simple_block.tc
// 测试15: 多层嵌套块（仅全局变量）
// 目标：验证全局作用域清理后不影响main
{
    // 这是一个在全局Scope之外的非法写法吗？实际ToyC不在函数内不允许块
    // 所以我们只测合法main
}
int main(void) {
    return 0;
}
