tests/semantic/invalid/09_invalid_main_1.tc
// 非法测试9: main函数签名错误
// 目标：应报错 SEM_INVALID_MAIN_SIGNATURE

// 错误1: main有int参数
int main(int argc) {
    return 0;
}
